--- a/index.html
+++ b/index.html
@@ -1,5 +1,139 @@
-<html>
-  <head>
-    <h1>We love COP4710</h1>
-  </body>
+<!doctype html>
+<html lang="en" >
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Contact Man</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+    <!-- Place favicon.ico in the root directory -->
+
+</head>
+<body>
+    <div id = "content" >
+    <!--[if lt IE 8]>
+        <p class="browserupgrade">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="http://browsehappy.com/">upgrade your browser</a> to improve
+        your experience.
+        </p>
+    <![endif]-->
+    <h1 id= "mainTitle" class="text-center">Contact Man<img id="mainLogo" src="./resources/logo_transparent.png"></h1>
+    <form class="form-container needs-validation col" id="loginForm" novalidate>
+<!--        <div class="alert alert-success collapse" role="alert" id="loginSucc">Login success!</div>-->
+        <div class="form-group mb-4 ">
+<!--                <label for="exampleInputEmail1">Username</label>-->
+<!--                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username" required>-->
+            <label for="loginUser">Username</label>
+            <input type="text" class="form-control" name="login" id="loginUser" aria-describedby="name" placeholder="Enter Username" >
+            <div class="invalid-feedback" id="userValMsg"></div>
+        </div>
+        <div class="form-group mb-2">
+            <label for="loginPass">Password</label>
+            <input type="password" class="form-control" name="password" id="loginPass" placeholder="Password" >
+            <div class="invalid-feedback" id="passValMsg"></div>
+        </div>
+        <div class="form-group form-check">
+        </div>
+
+        <div class= "container-fluid">
+            <div class="row">
+                <button id="loginButton" type="submit" class="btn btn-primary col">Login</button>
+            </div>
+            <!-- Button trigger modal -->
+            <div class="row">
+                <button type="button" class="btn btn-link col " data-bs-toggle="modal" data-bs-target="#registerModal">
+                Register
+                </button>
+            </div>
+        </div>
+        <div class="form-group alert collapse" role="alert" id="loginAlert"></div>
+    </form>
+
+    <!-- Modal Register -->
+    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Register an account</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="alert collapse" role="alert" id="regAlert"></div>
+                <form class="needs-validation" id="regForm" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group row">
+                            <div class="col">
+                                <label for="regFName">First Name</label>
+                                <input type="Text" class="form-control" id="regFName" name="regFName" placeholder="First Name">
+                                <div class="invalid-feedback" id="fNameVal"></div>
+                            </div>
+                            <div class="col">
+                                <label for="regLName">Last Name</label>
+                                <input type="Text" class="form-control" id="regLName" name="regLName" placeholder="Last Name" >
+                                <div class="invalid-feedback" id="lNameMsg"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="regUser">Username</label>
+                            <input type="text" class="form-control" id="regUser" name="regUser" aria-describedby="name" placeholder="Enter Username" >
+                            <div class="invalid-feedback" id="regUserMsg"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="regPass" class="form-label">Password</label>
+                            <input type="password" name="regPass" id="regPass"
+                                   class="form-control" placeholder="Password"
+                                   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}"
+                            >
+                            <div class="invalid-feedback" id="regPassValMsg"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="regRepeatPass" class="form-label">Repeat password</label>
+                            <input
+                                    type="password" name="regRepeatPass" id="regRepeatPass"
+                                    class="form-control" placeholder="Password"
+                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}"
+                            >
+                            <div class="invalid-feedback" id="repeatPassMsg"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" id="regButton">Register</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+<script type="text/javascript" src="sha256.js"></script>
+<script src="main.js"></script>
+<script>
+    // function makeLoginEventListeners(){
+    //     loginForm.addEventListener("submit", function(event){
+    //         // console.log(event)
+    //         loginSubmit(event)
+    //     }, false);
+    // // }
+    //
+    // // function makeRegEventListeners(){
+    //     regForm.addEventListener("submit", function(event){
+    //             registerSubmit(event)
+    //         }, false)
+
+        // }
+</script>
 </html>
