--- a/contactsPage.html
+++ b/contactsPage.html
@@ -21,27 +21,27 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">New Contact</h5>
+                <h5 class="modal-title">New Event</h5>
                 <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="addConForm" class="p-2" novalidate>
                     <div class="row mb-3 gx-3">
                         <div class="col">
-                            <input type="text" name="firstName" class="form-control form-control-lg" placeholder="Enter First Name">
+                            <input type="text" name="firstName" class="form-control form-control-lg" placeholder="Enter Event Name">
                             <div class="invalid-feedback">First name is required!</div>
                         </div>
                         <div class="col">
-                            <input type="text" name="lastName" class="form-control form-control-lg" placeholder="Enter Last Name">
+                            <input type="text" name="lastName" class="form-control form-control-lg" placeholder="Enter Category">
                             <div class="invalid-feedback">Last name is required!</div>
                         </div>
                     </div>
                     <div class="mb-3">
-                        <input type="email" name="emailAddress" class="form-control form-control-lg" placeholder="Enter E-mail">
+                        <input type="email" name="emailAddress" class="form-control form-control-lg" placeholder="Enter Description">
                         <div class="invalid-feedback">E-mail is required!</div>
                     </div>
                     <div class="mb-3">
-                        <input type="tel" name="phone" class="form-control form-control-lg" placeholder="Enter Phone Number">
+                        <input type="tel" name="phone" class="form-control form-control-lg" placeholder="Enter Time">
 <!--                        required>-->
                         <div class="invalid-feedback">E-mail is required!</div>
                     </div>
