--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact Man</title>
+    <title>College Event Website</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,7 @@
         your experience.
         </p>
     <![endif]-->
-    <h1 id= "mainTitle" class="text-center">Contact Man<img id="mainLogo" src="./resources/logo_transparent.png"></h1>
+    <h1 id= "mainTitle" class="text-center">College Event Website<img id="mainLogo" src="./resources/campus-events-310.jpeg"></h1>
     <form class="form-container needs-validation col" id="loginForm" novalidate>
 <!--        <div class="alert alert-success collapse" role="alert" id="loginSucc">Login success!</div>-->
         <div class="form-group mb-4 ">
