--- a/home.html
+++ b/home.html
@@ -229,6 +229,6 @@
 <script type="text/javascript" src="sha256.js"></script>
 <script src="main.js"></script>
 <script src="contacts.js"></script>
-<script src="contactMaker.js"></script>
+<!--<script src="contactMaker.js"></script>-->
 <script src="eventMaker.js"></script>
 </html>
