--- a/comments.html
+++ b/comments.html
@@ -122,5 +122,5 @@
 <script src="main.js"></script>
 <script src="contacts.js"></script>
 <script src="commentMaker.js"></script>
-<script src="contactMaker.js"></script>
+<!--<script src="contactMaker.js"></script>-->
 </html>
