fix contacts per page

--- a/home.html
+++ b/home.html
@@ -155,11 +155,8 @@
 <!--                            </button>-->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
-                                    <ul class="dropdown-menu">
-                                        <a class="nav-link"  href="home.html">Events</a>
-                                    </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link"  href="home.html">Events</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="RSO.html">RSOs</a>
