--- a/home.html
+++ b/home.html
@@ -155,12 +155,15 @@
 <!--                            </button>-->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="home.html">Events</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Events</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="nav-link button"  href="home.html">Public</a></li>
+                                        <li><a class="nav-link button"  href="home.html">Private</a></li>
+                                        <li><a class="nav-link button"  href="home.html">RSO</a></li>
+                                    </ul>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="RSO.html">RSOs</a>
-                                </li>
+                                <li class="nav-item"><a class="nav-link" href="RSO.html">RSOs</a></li>
 <!--                                    <li class="nav-item dropdown">-->
 <!--                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--                                            Dropdown-->
@@ -172,9 +175,7 @@
 <!--                                            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
 <!--                                        </ul>-->
 <!--                                    </li>-->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Universities</a>
-                                </li>
+<!--                                <li class="nav-item"><a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Universities</a></li>-->
 
                             </ul>
                             <form class="d-flex">
