--- a/home.html
+++ b/home.html
@@ -123,12 +123,12 @@
                 <form id="addCommentForm" class="p-2 needs-validation" novalidate>
                     <div class="col">
                         <label for="comment">New Comment</label>
-                        <input type="text" name="Text" id="comment" class="form-control form-control-lg" placeholder="Enter Event Name" >
+                        <input type="text" name="Text" id="comment" class="form-control form-control-lg" placeholder="Enter comment" >
                         <div class="invalid-feedback"></div>
                     </div>
                     <div>
                         <label for="rating">New Rating</label>
-                        <input type="text" name="Rating" id="rating" class="form-control form-control-lg" placeholder="Enter a description" >
+                        <input type="text" name="Rating" id="rating" class="form-control form-control-lg" placeholder="Rate 1-5" >
                         <div class="invalid-feedback"></div>
                     </div>
                     <div class="mb-3">
@@ -149,10 +149,10 @@
 <!--                    </div>-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-<!--                            <a class="navbar-brand" href="#">Navbar</a>-->
-<!--                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                                <span class="navbar-toggler-icon"></span>-->
-<!--                            </button>-->
+                        <!--                            <a class="navbar-brand" href="#">Navbar</a>-->
+                        <!--                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+                        <!--                                <span class="navbar-toggler-icon"></span>-->
+                        <!--                            </button>-->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
@@ -163,9 +163,9 @@
                                 </li>
                             </ul>
                             <form class="d-flex">
-<!--                                        <input class = "form-control from-control-lg" type = "text" placeholder = "Search" id="searchBar">-->
-<!--                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--                                    <button class="btn btn-outline-success" type="submit">Search</button>-->
+                                <!--                                        <input class = "form-control from-control-lg" type = "text" placeholder = "Search" id="searchBar">-->
+                                <!--                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
+                                <!--                                    <button class="btn btn-outline-success" type="submit">Search</button>-->
                             </form>
                         </div>
                     </div>
