add event form and validaton

--- a/home.html
+++ b/home.html
@@ -78,6 +78,11 @@
                             <input type="text" name="Name" id="eventName" class="form-control form-control-lg" placeholder="Enter Event Name" >
                             <div class="invalid-feedback"></div>
                         </div>
+                        <div class="col">
+                            <label for="eventName">Name</label>
+                            <input type="text" name="Event_id" id="IDevent" class="form-control form-control-lg" placeholder="Enter Event Id" >
+                            <div class="invalid-feedback"></div>
+                        </div>
                         <div>
                             <label for="eventDescription">Description</label>
                             <input type="text" name="Description" id="eventDescription" class="form-control form-control-lg" placeholder="Enter a description" >
