--- a/home.html
+++ b/home.html
@@ -163,10 +163,10 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Events</a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="nav-link button" id="allEvtButton" type="button"  href="home.html">All Events</a></li>
-                                        <li><a class="nav-link button" id="publicEvBtn" type="button"  href="home.html">Public</a></li>
-                                        <li><a class="nav-link button" id="privateEvBtn" href="home.html">Private</a></li>
-                                        <li><a class="nav-link button" id="RSOEvBtn" href="home.html">RSO</a></li>
+                                        <li><a class="nav-link button" id="allEvtButton" type="button">All Events</a></li>
+                                        <li><a class="nav-link button" id="publicEvBtn" type="button">Public</a></li>
+                                        <li><a class="nav-link button" id="privateEvBtn">Private</a></li>
+                                        <li><a class="nav-link button" id="RSOEvBtn">RSO</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="RSO.html">RSOs</a></li>
