type = button nav links

--- a/home.html
+++ b/home.html
@@ -165,8 +165,8 @@
                                     <ul class="dropdown-menu">
                                         <li><a class="nav-link button" id="allEvtButton" type="button">All Events</a></li>
                                         <li><a class="nav-link button" id="publicEvBtn" type="button">Public</a></li>
-                                        <li><a class="nav-link button" id="privateEvBtn">Private</a></li>
-                                        <li><a class="nav-link button" id="RSOEvBtn">RSO</a></li>
+                                        <li><a class="nav-link button" id="privateEvBtn" type="button">Private</a></li>
+                                        <li><a class="nav-link button" id="RSOEvBtn" type="button">RSO</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="RSO.html">RSOs</a></li>
