--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                             <div class="invalid-feedback"></div>
                         </div>
                         <div class="col">
-                            <label for="eventName">Name</label>
+                            <label for="IDevent">Name</label>
                             <input type="text" name="Event_id" id="IDevent" class="form-control form-control-lg" placeholder="Enter Event Id" >
                             <div class="invalid-feedback"></div>
                         </div>
@@ -160,7 +160,9 @@
                         <!--                            </button>-->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item"><a class="nav-link"  href="home.html">Home</a></li>
                                 <li class="nav-item dropdown">
+
                                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Events</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="nav-link button" id="allEvtButton" type="button">All Events</a></li>
