--- a/RSO.html
+++ b/RSO.html
@@ -61,7 +61,7 @@
                         <div class="invalid-feedback"></div>
                     </div>
                     <div class="col">
-                        <label for="RSOID">Name</label>
+                        <label for="RSOID">RSO ID</label>
                         <input type="text" name="RSO_id" id="RSOID" class="form-control form-control-lg" placeholder="Enter RSO Id" >
                         <div class="invalid-feedback"></div>
                     </div>
