change rso html header name

--- a/RSO.html
+++ b/RSO.html
@@ -86,7 +86,7 @@
 
 <body>
 <div id = "content">
-    <h2 class = "text-center">Contact Man</h2>
+    <h2 class = "text-center">College Events</h2>
     <div class = "container">
         <!--                    <div class = "row">-->
         <!--                        <input class = "form-control from-control-lg" type = "text" placeholder = "Search" id="searchBar">-->
