--- a/RSO.html
+++ b/RSO.html
@@ -49,7 +49,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">New Event</h5>
+                <h5 class="modal-title">New RSO</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="addConBtnClose"></button>
             </div>
             <div class="alert collapse" role="alert" id="addRSOAlert"></div>
